--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "faker": "^5.5.3"
+    "faker": "^5.5.3",
+    "json-schema": "^0.4.0"
   }
 }
