--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "faker": "^5.5.3",
-    "json-schema": "^0.4.0"
+    "joi": "^17.4.2",
+    "json-schema": "^0.4.0",
+    "mysql2": "^2.3.3",
+    "sequelize": "^6.9.0"
   }
 }
